--- a/src/css/render.css
+++ b/src/css/render.css
@@ -23,3 +23,31 @@
   background-color: #cc3333;
   padding: 0.5rem;
 }
+
+.render-controls {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  background-color: #333333;
+  width: max-content;
+  border-radius: 0.25rem;
+}
+
+.render-controls-plus {
+  padding: 0.5rem;
+  border-bottom: solid #555555 0.1rem;
+}
+
+.render-controls-minus {
+  padding: 0.5rem;
+  padding-bottom: 0.25rem;
+}
+
+.render-controls-zoom {
+  width: 100%;
+  text-align: center;
+  font-size: 0.65rem;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding-bottom: 0.25rem;
+}
