--- a/src/css/graphical.css
+++ b/src/css/graphical.css
@@ -8,8 +8,8 @@
   display: inline-block;
   width: 0.75rem;
   height: 0.75rem;
-  border-style: none;
   padding: 0;
+  border: solid #222222 0.025rem;
 }
 
 .graphical-off {
@@ -18,6 +18,7 @@
 
 .graphical-on {
   background-color: #cccccc;
+  border-color: #cccccc;
 }
 
 .graphical-row {
