--- a/src/css/tabbar.css
+++ b/src/css/tabbar.css
@@ -6,7 +6,7 @@
 .tabbar-item {
   display: inline-block;
   position: relative;
-  cursor: default;
+  cursor: pointer;
   font-size: 0.75rem;
   font-weight: bold;
   text-transform: uppercase;
