--- a/src/css/text.css
+++ b/src/css/text.css
@@ -7,3 +7,13 @@
   width: 100%;
   height: 100%;
 }
+
+.monaco-container {
+  width: 100%;
+  height: 100%;
+}
+
+.editor-windows {
+  width: 100%;
+  height: 100%;
+}
