Revert "add tabs for all planned functions"
This reverts commit d2eedea7ab1b45e702b5f2bac727e8c7361a8fb3.

--- a/src/css/tabbar.css
+++ b/src/css/tabbar.css
@@ -6,7 +6,7 @@
 .tabbar-item {
   display: inline-block;
   position: relative;
-  cursor: pointer;
+  cursor: default;
   font-size: 0.75rem;
   font-weight: bold;
   text-transform: uppercase;
