--- a/src/css/text.css
+++ b/src/css/text.css
@@ -108,6 +108,19 @@
 }
 
 .text-sidebar-properties-option {
-  padding-top: 0.15rem;
   margin: auto 0 auto auto;
+}
+
+.text-sidebar-properties-text {
+  margin-top: -0.125rem;
+  background-color: #272727;
+  border: none;
+  margin-left: 0.25rem;
+  padding: 0;
+  outline: none !important;
+  font-size: 0.9rem;
+  color: #cccccc;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
 }
