--- a/src/css/text.css
+++ b/src/css/text.css
@@ -123,4 +123,9 @@
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
+  text-align: right;
+}
+
+.text-sidebar-properties-readonly {
+  color: #aaaaaa;
 }
