--- a/src/css/text.css
+++ b/src/css/text.css
@@ -81,7 +81,7 @@
 .text-sidebar-properties {
   border-top: #444444 solid 1px;
   margin-top: auto;
-  height: 30%;
+  height: 25rem;
   overflow-y: auto;
 }
 
